tests/idris2/error/perror030/expected
1/1: Building Main (Main.idr)
Error: Bracket is not properly closed.

Main:4:28--4:29
 1 | main : IO ()
 2 | main = do
 3 |   let foo = 10
 4 |   printLn "foo = \{show foo"
                                ^

